--- a/responsiveWebDesign/htmlRegistrationForm/index.html
+++ b/responsiveWebDesign/htmlRegistrationForm/index.html
@@ -1,4 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>Registration Form</title>
+		<link rel="stylesheet" href="styles.css">
+	</head>
+	<body>
+		<h1>Registration Form</h1>
+		<p>Please fill out this form with the required information</p>
+		<form method="post" action="https://register-demo/freecodecamp.org">
+			<fieldset>
+				<label>Enter your first name:</label>
+				<label>Enter your last name:</label>
+				<label>Enter your email:</label>
+				<label>Create a new password:</label>
+			</fieldset>
+			<fieldset>
+			</fieldset>
+			<fieldset>
+			</fieldset>
+		</form>
+	</body>
 </html>
 
