--- a/responsiveWebDesign/quiz/index.html
+++ b/responsiveWebDesign/quiz/index.html
@@ -13,12 +13,58 @@
 			<h1>HTML/CSS Quiz</h1>
 			<nav>
 				<ul>
-					<li><a>INFO</a></li>
-					<li><a>HTML</a></li>
-					<li><a>CSS</a></li>
+					<li><a href="#student-info">INFO</a></li>
+					<li><a href="#html-questions">HTML</a></li>
+					<li><a href="#css-questions">CSS</a></li>
 				</ul>
 			</nav>
 		</header>
-		<main></main>
+		<main>
+			<form action="https://freecodecamp.org/practice-project/accessibility-quiz" method="post">
+				<section role="region" aria-labelledby="student-info">
+					<h2 id="student-info">Student Information</h2>
+					<div class="info">
+						<label for="name">Enter your name: </label>
+						<input type="text" name="student-name" id="name"/>
+					</div>
+					<div class="info">
+						<label for="email">Enter your email: </label>
+						<input type="email" name="email" id="email"/>
+					</div>
+					<div class="info">
+						<label for="dob">Enter you date of birth: </label>
+						<input type="date" name="dob" id="dob"/>
+					</div>
+				</section>
+				<section role="region" aria-labelledby="html-questions">
+					<h2 id="html-questions">HTML Questions</h2>
+					<div class="question-block">
+						<h3><span class="sr-only">Question</span>1</h3>
+						<fieldset class="question" name="html-question-1">
+							<legend>The legend element represents a caption for the content of its parent fieldset element
+							</legend>
+							<ul class="answers-list">
+								<li><label for="q1-a1"><input type="radio" id="q1-a1" value="true">True</label></li>
+								<li><label for="q1-a2"><input type="radio" id="q1-a2" value="false">False</label></li>
+							</ul>
+						</fieldset>
+					</div>
+					<div class="question-block">
+						<h3><span class="sr-only">Question</span>2</h3>
+						<fieldset class="question" name="html-question-2">
+							<legend>A label element nesting an input element is required to have a for attribute with the same value as the input's id
+							</legend>
+							<ul class="answers-list">
+								<li><label for="q2-a1"><input type="radio" id="q2-a1" value="true">True</label></li>
+								<li><label for="q2-a2"><input type="radio" id="q2-a2" value="false">False</label></li>
+							</ul>
+						</fieldset>
+					</div>
+				</section>
+				<section role="region" aria-labelledby="css-questions">
+					<h2 id="css-questions">CSS Questions</h2>
+				</section>
+			</form>
+		</main>
 	</body>
 </html>
