--- a/responsiveWebDesign/quiz/index.html
+++ b/responsiveWebDesign/quiz/index.html
@@ -44,8 +44,8 @@
 							<legend>The legend element represents a caption for the content of its parent fieldset element
 							</legend>
 							<ul class="answers-list">
-								<li><label for="q1-a1"><input type="radio" id="q1-a1" value="true">True</label></li>
-								<li><label for="q1-a2"><input type="radio" id="q1-a2" value="false">False</label></li>
+								<li><label for="q1-a1"><input type="radio" name="html-question-1" id="q1-a1" value="true">True</label></li>
+								<li><label for="q1-a2"><input type="radio" name="html-question-1" id="q1-a2" value="false">False</label></li>
 							</ul>
 						</fieldset>
 					</div>
@@ -55,16 +55,43 @@
 							<legend>A label element nesting an input element is required to have a for attribute with the same value as the input's id
 							</legend>
 							<ul class="answers-list">
-								<li><label for="q2-a1"><input type="radio" id="q2-a1" value="true">True</label></li>
-								<li><label for="q2-a2"><input type="radio" id="q2-a2" value="false">False</label></li>
+								<li><label for="q2-a1"><input type="radio" name="html-question-2" id="q2-a1" value="true">True</label></li>
+								<li><label for="q2-a2"><input type="radio" name="html-1uestion-2" id="q2-a2" value="false">False</label></li>
 							</ul>
 						</fieldset>
 					</div>
 				</section>
 				<section role="region" aria-labelledby="css-questions">
 					<h2 id="css-questions">CSS Questions</h2>
+					<div class="formrow">
+						<div class="question-block">
+							<label for="selector">Can the CSS margin properties accept negative values?</label>
+						</div>
+						<div class="answer">
+							<select name="css-question-1" id="selector" required>
+								<option value="">Select one option</option>
+								<option value="yes">Yes</option>
+								<option value="no">No</option>
+							</select>
+						</div>
+						<div class="question-block">
+							<label for="textarea">Do you have any questions:</label>
+						</div>
+						<div class="answer">
+							<textarea name="css-question-2" id="textarea" rows="4" cols="30" />
+						</div>
+					</div>
 				</section>
+				<input type="submit" value="send">
 			</form>
 		</main>
+		<footer>
+			<address>
+				<a href="https://freecodecamp.org">freeCodeCamp</a><br/>
+				San Francisco<br/>
+				California<br/>
+				USA
+			</address>
+		</footer>
 	</body>
 </html>
